# CrisisPulse

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
docs/: engineering_roadmap.md  github_release_text.md  release_checklist_v0.1.0.md  reproducibility.md  v0.1.0_release_notes.md
scripts/: run_embed.py  run_eval.py  run_label_topics.py  run_merge.py  run_monitor.py  run_monitor_report.py  run_prepare.py  run_prepare_monitor_inputs.py  run_topic_change.py  run_topic_summary.py  run_tune.py
src/crisispulse/: config.py
src/crisispulse/embeddings/: e5.py
src/crisispulse/topic_model/: evaluate.py  merge.py  objective.py
src/incremental_bertopic_brand_crisis_detection/: __init__.py
src/incremental_bertopic_brand_crisis_detection/data/: preprocessing.py
src/incremental_bertopic_brand_crisis_detection/monitoring/: __init__.py  drift.py  report.py
src/incremental_bertopic_brand_crisis_detection/topic_model/: __init__.py  analysis.py  compat.py  evaluate.py  labeling.py  merge.py  metrics.py  objective.py
tests/: test_analysis.py  test_preprocessing.py
